--- a/eks/ConfigurationFiles/deployment.yaml
+++ b/eks/ConfigurationFiles/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: gokulsm/dev
+        image: nginx
         ports:
         - containerPort: 80
