--- a/eks/ConfigurationFiles/deployment.yaml
+++ b/eks/ConfigurationFiles/deployment.yaml
@@ -15,6 +15,6 @@ spec:
       containers:
       - name: nginx
         image: gokulsm/dev
-        imagePullpolicy:Always
+        imagePullpolicy: Never
         ports:
         - containerPort: 80
